--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -221,7 +221,7 @@
        "[5 rows x 970 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -244,7 +244,7 @@
        "1183747"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,19 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# generate value count map\n",
-    "vc_map = {col: df_numeric[col].value_counts() for col in df_numeric.columns[1:-1]}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -327,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +326,7 @@
        "['26', '27', '28']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -515,7 +503,7 @@
        "4           NaN           NaN           NaN           NaN  11         0  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,32 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# NaN count check\n",
-    "nan_count = {}\n",
-    "for col in df_226.columns[:-2]:\n",
-    "    nan_count[col] = len(filter(lambda x: x, [np.isnan(part) for part in df_226[col].tolist()]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -564,7 +527,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create uid string column and set as index\n",
+    "df_226[\"uid\"] = df_226[\"Id\"].apply(lambda x: str(x))\n",
+    "df_226.drop(\"Id\", inplace=True, axis=1)\n",
+    "df_226.set_index(\"uid\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# remove Response so that we can correctly check isnull()\n",
+    "df_226.drop(\"Response\", inplace=True, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -575,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -586,7 +575,7 @@
        "956736"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -619,13 +608,231 @@
        "227011"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(df_226_cut)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>L2_S26_F3036</th>\n",
+       "      <th>L2_S26_F3040</th>\n",
+       "      <th>L2_S26_F3047</th>\n",
+       "      <th>L2_S26_F3051</th>\n",
+       "      <th>L2_S26_F3055</th>\n",
+       "      <th>L2_S26_F3062</th>\n",
+       "      <th>L2_S26_F3069</th>\n",
+       "      <th>L2_S26_F3073</th>\n",
+       "      <th>L2_S26_F3077</th>\n",
+       "      <th>L2_S26_F3106</th>\n",
+       "      <th>L2_S26_F3113</th>\n",
+       "      <th>L2_S26_F3117</th>\n",
+       "      <th>L2_S26_F3121</th>\n",
+       "      <th>L2_S26_F3125</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>uid</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1583071</th>\n",
+       "      <td>-0.138</td>\n",
+       "      <td>0.066</td>\n",
+       "      <td>-0.003</td>\n",
+       "      <td>-0.090</td>\n",
+       "      <td>-0.031</td>\n",
+       "      <td>0.033</td>\n",
+       "      <td>-0.046</td>\n",
+       "      <td>0.105</td>\n",
+       "      <td>-0.035</td>\n",
+       "      <td>-0.006</td>\n",
+       "      <td>0.018</td>\n",
+       "      <td>0.060</td>\n",
+       "      <td>-0.075</td>\n",
+       "      <td>-0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228055</th>\n",
+       "      <td>-0.045</td>\n",
+       "      <td>-0.032</td>\n",
+       "      <td>-0.130</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>-0.031</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>-0.035</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>-0.080</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>-0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287146</th>\n",
+       "      <td>-0.082</td>\n",
+       "      <td>0.156</td>\n",
+       "      <td>-0.032</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>-0.031</td>\n",
+       "      <td>0.058</td>\n",
+       "      <td>0.069</td>\n",
+       "      <td>-0.090</td>\n",
+       "      <td>-0.035</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>-0.029</td>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>-0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>228056</th>\n",
+       "      <td>-0.045</td>\n",
+       "      <td>-0.032</td>\n",
+       "      <td>-0.130</td>\n",
+       "      <td>-0.004</td>\n",
+       "      <td>-0.031</td>\n",
+       "      <td>0.004</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>0.158</td>\n",
+       "      <td>-0.035</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>-0.080</td>\n",
+       "      <td>0.053</td>\n",
+       "      <td>-0.011</td>\n",
+       "      <td>-0.034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>287140</th>\n",
+       "      <td>-0.211</td>\n",
+       "      <td>-0.205</td>\n",
+       "      <td>0.064</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>-0.031</td>\n",
+       "      <td>-0.204</td>\n",
+       "      <td>-0.125</td>\n",
+       "      <td>0.050</td>\n",
+       "      <td>-0.035</td>\n",
+       "      <td>-0.586</td>\n",
+       "      <td>0.019</td>\n",
+       "      <td>-0.083</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>-0.034</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         L2_S26_F3036  L2_S26_F3040  L2_S26_F3047  L2_S26_F3051  L2_S26_F3055  \\\n",
+       "uid                                                                             \n",
+       "1583071        -0.138         0.066        -0.003        -0.090        -0.031   \n",
+       "228055         -0.045        -0.032        -0.130        -0.004        -0.031   \n",
+       "287146         -0.082         0.156        -0.032         0.000        -0.031   \n",
+       "228056         -0.045        -0.032        -0.130        -0.004        -0.031   \n",
+       "287140         -0.211        -0.205         0.064         0.168        -0.031   \n",
+       "\n",
+       "         L2_S26_F3062  L2_S26_F3069  L2_S26_F3073  L2_S26_F3077  L2_S26_F3106  \\\n",
+       "uid                                                                             \n",
+       "1583071         0.033        -0.046         0.105        -0.035        -0.006   \n",
+       "228055          0.004         0.020         0.158        -0.035         0.055   \n",
+       "287146          0.058         0.069        -0.090        -0.035         0.002   \n",
+       "228056          0.004         0.020         0.158        -0.035         0.055   \n",
+       "287140         -0.204        -0.125         0.050        -0.035        -0.586   \n",
+       "\n",
+       "         L2_S26_F3113  L2_S26_F3117  L2_S26_F3121  L2_S26_F3125  \n",
+       "uid                                                              \n",
+       "1583071         0.018         0.060        -0.075        -0.034  \n",
+       "228055         -0.080         0.053        -0.011        -0.034  \n",
+       "287146         -0.029        -0.011         0.019        -0.034  \n",
+       "228056         -0.080         0.053        -0.011        -0.034  \n",
+       "287140          0.019        -0.083         0.168        -0.034  "
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_226_cut.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# iterate over all 15 features and generate plots\n",
+    "def generate_plots(df, size):\n",
+    "    \"\"\"\n",
+    "        Helper function to generate a grid of plots for the\n",
+    "        assumed features of a dataframe. Should be used strictly\n",
+    "        for relative-feature inspection (i.e. how do plots for each\n",
+    "        feature compare to one another).\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        df : {pandas.DataFrame}\n",
+    "            data set consisting of features (columns) and records (row index)\n",
+    "        \n",
+    "        size : {tuple}\n",
+    "            grid representation; rows and columns of the grid correspond\n",
+    "            to index 0 and 1, respectively\n",
+    "\"\"\"\n",
+    "    numerical_ids = [int(id) for id in df.index.tolist()]\n",
+    "    fig = matplotlib.pyplot.figure(figsize=(20, 20), dpi=400)\n",
+    "    for idx, col in enumerate(df.columns):\n",
+    "        axes = fig.add_subplot(size[0], size[1], idx+1)\n",
+    "        axes.plot(zip(numerical_ids, df[col].tolist()))\n",
+    "    \n",
+    "    matplotlib.pyplot.show()"
    ]
   },
   {
