--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -1288,7 +1288,8 @@
    "cell_type": "code",
    "execution_count": 96,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1310,6 +1311,38 @@
     "plt.ylabel(\"Switch Frequency\")\n",
     "plt.title(\"Feature Switch Frequency\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# write MCC evaluation for later use\n",
+    "def mcc_eval(result, test):\n",
+    "    \"\"\"\n",
+    "        Matthew's Correlation Coefficient used for model evaluation.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        result : {pandas.DataFrame}\n",
+    "            output of model mapping parts to response variable. \n",
+    "        \n",
+    "        test : {pandas.DataFrame}\n",
+    "            set with test data not exposed to the model\n",
+    "    \"\"\"\n",
+    "    true = result['response'] == test['response']\n",
+    "    false = result['response'] != test['response']\n",
+    "    positives = result['response'] == 1\n",
+    "    negatives = result['response'] == 0\n",
+    "    tp = len(result[true & positive])\n",
+    "    tn = len(result[true & negative])\n",
+    "    fp = len(result[false & positive])\n",
+    "    fn = len(result[false & negative])\n",
+    "    return (tp*tn - fp*fn)/np.sqrt((tp+fp)*(tp+fn)*(tn+fp)*(tn+fn)) "
    ]
   },
   {
