NaN imputation method

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 188,
    "metadata": {
     "collapsed": true
    },
@@ -1001,7 +1001,8 @@
    "cell_type": "code",
    "execution_count": 174,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1062,6 +1063,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# create a copy of df_numeric for nan filling\n",
+    "# every copy of df_numeric must be \"deleted\" once model is built\n",
+    "df_num_nan = df_numeric.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
@@ -1071,9 +1085,6 @@
     "# dumb model with all features\n",
     "from sklearn import linear_model\n",
     "\n",
-    "# want to preserve data with NaNs for further analysis\n",
-    "# use reduced-models approach and only use cols\n",
-    "\n",
     "# preserve NaNs for further analysis => use reduced-models approach and \n",
     "df_num_model = df_numeric.fillna()\n",
     "\n",
@@ -1082,6 +1093,51 @@
     "\n",
     "clf = linear_model.SGDClassifier(loss=\"log\")\n",
     "clf.fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def nan_transform(df, method=\"mean\"):\n",
+    "    \"\"\"\n",
+    "        Apply transformation on NaN values in dataframe based on passed\n",
+    "        method.\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        df : {pandas.DataFrame}\n",
+    "            dataframe to be transformed\n",
+    "        \n",
+    "        method : {string}\n",
+    "            transformation to apply to NaN values; defaults to mean of\n",
+    "            series\n",
+    "        \n",
+    "        Method Options\n",
+    "        --------------\n",
+    "        median : use the median of the feature to fill NaNs\n",
+    "        \n",
+    "        mean: use the mean of the feature to fill NaNs\n",
+    "        \n",
+    "        feature_average: compute the mean of all features for a particular\n",
+    "        record (series) and use it to fill NaN values\n",
+    "    \"\"\"\n",
+    "    methods = {\n",
+    "        \"mean\": df.mean(),\n",
+    "        \"median\": df.median()\n",
+    "    }\n",
+    "    \n",
+    "    # handle feature_average separately; conduct record iteration\n",
+    "    if method == \"feature_average\":\n",
+    "        transformed = df.apply(lambda x: x.fillna(x.mean()), axis=1)\n",
+    "    else:\n",
+    "        transformed = df.fillna(methods[method])\n",
+    "    \n",
+    "    return transformed"
    ]
   },
   {
