simple model building func  using SGD

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -1076,27 +1076,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# dumb model with all features\n",
-    "from sklearn import linear_model\n",
-    "\n",
-    "# preserve NaNs for further analysis => use reduced-models approach and \n",
-    "df_num_model = df_numeric.fillna()\n",
-    "\n",
-    "x = df_numeric[[col for col in df_numeric.columns if col not in [\"Id\", \"Response\"]]].values\n",
-    "y = df_numeric[\"Response\"].values\n",
-    "\n",
-    "clf = linear_model.SGDClassifier(loss=\"log\")\n",
-    "clf.fit(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 266,
    "metadata": {
     "collapsed": false
@@ -1142,12 +1121,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total memory ~ 2GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check memory usage \n",
+    "import os\n",
+    "import psutil\n",
+    "process = psutil.Process(os.getpid())\n",
+    "print \"Total memory ~ %sGB\" % (process.memory_info().rss / 10**9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# dumb model with all features\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "# preserve NaNs for further analysis => use reduced-models approach and \n",
+    "df_num_model = df_numeric.fillna()\n",
+    "\n",
+    "x = df_numeric[[col for col in df_numeric.columns if col not in [\"Id\", \"Response\"]]].values\n",
+    "y = df_numeric[\"Response\"].values\n",
+    "\n",
+    "clf = linear_model.SGDClassifier(loss=\"log\")\n",
+    "clf.fit(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# simple model to compute all features\n",
+    "def sgd_class(data, target, test, loss=\"log\"):\n",
+    "    \"\"\"\n",
+    "        Stochastic Gradient Classifier with log loss (i.e. fits logistic\n",
+    "        regression model).\n",
+    "        \n",
+    "        Parameters\n",
+    "        ----------\n",
+    "        data : {pandas.DataFrame}\n",
+    "            training data\n",
+    "        \n",
+    "        target : {pandas.Series}\n",
+    "            response variable\n",
+    "            \n",
+    "        test : {pandas.DataFrame}\n",
+    "            test data\n",
+    "        \n",
+    "        loss : {string}\n",
+    "            loss function to follow when classifying; defaults to 'log'\n",
+    "            in order to force logistic regression model\n",
+    "    \"\"\"\n",
+    "    X = data.values\n",
+    "    y = target.values\n",
+    "    \n",
+    "    # we tweak params here as we deem appropriate\n",
+    "    clf = linear_model.SGDClassifier(loss=loss)\n",
+    "    \n",
+    "    clf.fit(X, y)\n",
+    "    \n",
+    "    return clf.predict(test.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 307,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 1, 1])"
+      ]
+     },
+     "execution_count": 307,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgd_class(nan_transform(test.drop([\"Id\", 4], axis=1)), test[4], test_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "prediction = sgd_class(nan_transform(df_numeric.drop([\"Id\", \"Response\"], axis=1)), df_numeric[\"Response\"])"
+   ]
   }
  ],
  "metadata": {
