training data 80-20 split

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 324,
    "metadata": {
     "collapsed": false
    },
@@ -1130,7 +1130,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total memory ~ 2GB\n"
+      "Total memory ~ 1GB\n"
      ]
     }
    ],
@@ -1139,7 +1139,7 @@
     "import os\n",
     "import psutil\n",
     "process = psutil.Process(os.getpid())\n",
-    "print \"Total memory ~ %sGB\" % (process.memory_info().rss / 10**9)"
+    "print \"Total memory ~ %sGB\" % (process.memory_info().rss / (10**9))"
    ]
   },
   {
@@ -1223,6 +1223,123 @@
    ],
    "source": [
     "sgd_class(nan_transform(test.drop([\"Id\", 4], axis=1)), test[4], test_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_test_num = pd.read_csv(\"test_numeric.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1183748 entries, 0 to 1183747\n",
+      "Columns: 969 entries, Id to L3_S51_F4262\n",
+      "dtypes: float64(968), int64(1)\n",
+      "memory usage: 8.5 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# remember that numeric test has already been loaded\n",
+    "df_test_num.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# split (already reduced) training data into training and test sets\n",
+    "df_num_train = df_numeric[:240000]\n",
+    "df_num_test = df_numeric[240000:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 240000 entries, 0 to 239999\n",
+      "Columns: 970 entries, Id to Response\n",
+      "dtypes: float64(968), int64(2)\n",
+      "memory usage: 1.7 GB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_num_train.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 60000 entries, 240000 to 299999\n",
+      "Columns: 970 entries, Id to Response\n",
+      "dtypes: float64(968), int64(2)\n",
+      "memory usage: 444.0 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_num_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 334,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# show truly independent data sets\n",
+    "set(df_num_train[\"Id\"].values) & set(df_num_test[\"Id\"].values)"
    ]
   },
   {
