--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -933,14 +933,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 367,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# write MCC evaluation for later use\n",
-    "def mcc_eval(result, test):\n",
+    "def mcc_eval(result, test, response_col=\"Response\"):\n",
     "    \"\"\"\n",
     "        Matthew's Correlation Coefficient used for model evaluation.\n",
     "        \n",
@@ -952,14 +952,18 @@
     "        test : {pandas.DataFrame}\n",
     "            set with test data not exposed to the model\n",
     "    \"\"\"\n",
-    "    true = result['response'] == test['response']\n",
-    "    false = result['response'] != test['response']\n",
-    "    positives = result['response'] == 1\n",
-    "    negatives = result['response'] == 0\n",
+    "    true = result[response_col] == test[response_col]\n",
+    "    false = result[response_col] != test[response_col]\n",
+    "    positives = result[response_col] == 1\n",
+    "    negatives = result[response_col] == 0\n",
     "    tp = len(result[true & positive])\n",
+    "    print \"true positives: %s\" % tp\n",
     "    tn = len(result[true & negative])\n",
+    "    print \"true negatives: %s\" % tn\n",
     "    fp = len(result[false & positive])\n",
+    "    print \"false positives: %s\" % fp\n",
     "    fn = len(result[false & negative])\n",
+    "    print \"false negatives: %s\" % fn\n",
     "    return (tp*tn - fp*fn)/np.sqrt((tp+fp)*(tp+fn)*(tn+fp)*(tn+fn)) "
    ]
   },
@@ -1321,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 335,
    "metadata": {
     "collapsed": false
    },
@@ -1332,7 +1336,7 @@
        "set()"
       ]
      },
-     "execution_count": 334,
+     "execution_count": 335,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,14 +1348,516 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 336,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>L0_S0_F0</th>\n",
+       "      <th>L0_S0_F2</th>\n",
+       "      <th>L0_S0_F4</th>\n",
+       "      <th>L0_S0_F6</th>\n",
+       "      <th>L0_S0_F8</th>\n",
+       "      <th>L0_S0_F10</th>\n",
+       "      <th>L0_S0_F12</th>\n",
+       "      <th>L0_S0_F14</th>\n",
+       "      <th>L0_S0_F16</th>\n",
+       "      <th>...</th>\n",
+       "      <th>L3_S50_F4245</th>\n",
+       "      <th>L3_S50_F4247</th>\n",
+       "      <th>L3_S50_F4249</th>\n",
+       "      <th>L3_S50_F4251</th>\n",
+       "      <th>L3_S50_F4253</th>\n",
+       "      <th>L3_S51_F4256</th>\n",
+       "      <th>L3_S51_F4258</th>\n",
+       "      <th>L3_S51_F4260</th>\n",
+       "      <th>L3_S51_F4262</th>\n",
+       "      <th>Response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>-0.034</td>\n",
+       "      <td>-0.197</td>\n",
+       "      <td>-0.179</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.116</td>\n",
+       "      <td>-0.015</td>\n",
+       "      <td>-0.032</td>\n",
+       "      <td>0.020</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.088</td>\n",
+       "      <td>0.086</td>\n",
+       "      <td>0.003</td>\n",
+       "      <td>-0.052</td>\n",
+       "      <td>0.161</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>-0.015</td>\n",
+       "      <td>-0.072</td>\n",
+       "      <td>-0.225</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.036</td>\n",
+       "      <td>-0.064</td>\n",
+       "      <td>0.294</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.074</td>\n",
+       "      <td>0.161</td>\n",
+       "      <td>0.022</td>\n",
+       "      <td>0.128</td>\n",
+       "      <td>-0.026</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11</td>\n",
+       "      <td>-0.055</td>\n",
+       "      <td>-0.086</td>\n",
+       "      <td>0.294</td>\n",
+       "      <td>0.330</td>\n",
+       "      <td>0.118</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.030</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>-0.169</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 970 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Id  L0_S0_F0  L0_S0_F2  L0_S0_F4  L0_S0_F6  L0_S0_F8  L0_S0_F10  L0_S0_F12  \\\n",
+       "0   4     0.030    -0.034    -0.197    -0.179     0.118      0.116     -0.015   \n",
+       "1   6       NaN       NaN       NaN       NaN       NaN        NaN        NaN   \n",
+       "2   7     0.088     0.086     0.003    -0.052     0.161      0.025     -0.015   \n",
+       "3   9    -0.036    -0.064     0.294     0.330     0.074      0.161      0.022   \n",
+       "4  11    -0.055    -0.086     0.294     0.330     0.118      0.025      0.030   \n",
+       "\n",
+       "   L0_S0_F14  L0_S0_F16    ...     L3_S50_F4245  L3_S50_F4247  L3_S50_F4249  \\\n",
+       "0     -0.032      0.020    ...              NaN           NaN           NaN   \n",
+       "1        NaN        NaN    ...              NaN           NaN           NaN   \n",
+       "2     -0.072     -0.225    ...              NaN           NaN           NaN   \n",
+       "3      0.128     -0.026    ...              NaN           NaN           NaN   \n",
+       "4      0.168     -0.169    ...              NaN           NaN           NaN   \n",
+       "\n",
+       "   L3_S50_F4251  L3_S50_F4253  L3_S51_F4256  L3_S51_F4258  L3_S51_F4260  \\\n",
+       "0           NaN           NaN           NaN           NaN           NaN   \n",
+       "1           NaN           NaN           NaN           NaN           NaN   \n",
+       "2           NaN           NaN           NaN           NaN           NaN   \n",
+       "3           NaN           NaN           NaN           NaN           NaN   \n",
+       "4           NaN           NaN           NaN           NaN           NaN   \n",
+       "\n",
+       "   L3_S51_F4262  Response  \n",
+       "0           NaN         0  \n",
+       "1           NaN         0  \n",
+       "2           NaN         0  \n",
+       "3           NaN         0  \n",
+       "4           NaN         0  \n",
+       "\n",
+       "[5 rows x 970 columns]"
+      ]
+     },
+     "execution_count": 336,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_num_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>L0_S0_F0</th>\n",
+       "      <th>L0_S0_F2</th>\n",
+       "      <th>L0_S0_F4</th>\n",
+       "      <th>L0_S0_F6</th>\n",
+       "      <th>L0_S0_F8</th>\n",
+       "      <th>L0_S0_F10</th>\n",
+       "      <th>L0_S0_F12</th>\n",
+       "      <th>L0_S0_F14</th>\n",
+       "      <th>L0_S0_F16</th>\n",
+       "      <th>...</th>\n",
+       "      <th>L3_S50_F4245</th>\n",
+       "      <th>L3_S50_F4247</th>\n",
+       "      <th>L3_S50_F4249</th>\n",
+       "      <th>L3_S50_F4251</th>\n",
+       "      <th>L3_S50_F4253</th>\n",
+       "      <th>L3_S51_F4256</th>\n",
+       "      <th>L3_S51_F4258</th>\n",
+       "      <th>L3_S51_F4260</th>\n",
+       "      <th>L3_S51_F4262</th>\n",
+       "      <th>Response</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>240000</th>\n",
+       "      <td>480068</td>\n",
+       "      <td>-0.055</td>\n",
+       "      <td>-0.078</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.348</td>\n",
+       "      <td>-0.143</td>\n",
+       "      <td>0.025</td>\n",
+       "      <td>0.03</td>\n",
+       "      <td>0.168</td>\n",
+       "      <td>0.183</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240001</th>\n",
+       "      <td>480070</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240002</th>\n",
+       "      <td>480072</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240003</th>\n",
+       "      <td>480073</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240004</th>\n",
+       "      <td>480074</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 970 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Id  L0_S0_F0  L0_S0_F2  L0_S0_F4  L0_S0_F6  L0_S0_F8  L0_S0_F10  \\\n",
+       "240000  480068    -0.055    -0.078      0.33     0.348    -0.143      0.025   \n",
+       "240001  480070       NaN       NaN       NaN       NaN       NaN        NaN   \n",
+       "240002  480072       NaN       NaN       NaN       NaN       NaN        NaN   \n",
+       "240003  480073       NaN       NaN       NaN       NaN       NaN        NaN   \n",
+       "240004  480074       NaN       NaN       NaN       NaN       NaN        NaN   \n",
+       "\n",
+       "        L0_S0_F12  L0_S0_F14  L0_S0_F16    ...     L3_S50_F4245  L3_S50_F4247  \\\n",
+       "240000       0.03      0.168      0.183    ...              NaN           NaN   \n",
+       "240001        NaN        NaN        NaN    ...              NaN           NaN   \n",
+       "240002        NaN        NaN        NaN    ...              NaN           NaN   \n",
+       "240003        NaN        NaN        NaN    ...              NaN           NaN   \n",
+       "240004        NaN        NaN        NaN    ...              NaN           NaN   \n",
+       "\n",
+       "        L3_S50_F4249  L3_S50_F4251  L3_S50_F4253  L3_S51_F4256  L3_S51_F4258  \\\n",
+       "240000           NaN           NaN           NaN           NaN           NaN   \n",
+       "240001           NaN           NaN           NaN           NaN           NaN   \n",
+       "240002           NaN           NaN           NaN           NaN           NaN   \n",
+       "240003           NaN           NaN           NaN           NaN           NaN   \n",
+       "240004           NaN           NaN           NaN           NaN           NaN   \n",
+       "\n",
+       "        L3_S51_F4260  L3_S51_F4262  Response  \n",
+       "240000           NaN           NaN         0  \n",
+       "240001           NaN           NaN         0  \n",
+       "240002           NaN           NaN         0  \n",
+       "240003           NaN           NaN         0  \n",
+       "240004           NaN           NaN         0  \n",
+       "\n",
+       "[5 rows x 970 columns]"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_num_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prediction = sgd_class(nan_transform(df_num_train.drop([\"Id\", \"Response\"], axis=1), method=\"mean\"), df_num_train[\"Response\"], nan_transform(df_num_test.drop([\"Id\", \"Response\"], axis=1)), loss=\"log\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "result = pd.DataFrame(zip(df_num_test[\"Id\"], prediction), columns=[\"Id\", \"Response\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true positives: 1\n",
+      "true negatives: 2\n",
+      "false positives: 0\n",
+      "false negatives: 0\n",
+      "MCC evaluation: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run evaluation for mean imputation\n",
+    "print \"MCC evaluation: %s\" % mcc_eval(result, df_num_test[[\"Id\", \"Response\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 370,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "prediction = sgd_class(nan_transform(df_num_train.drop([\"Id\", \"Response\"], axis=1), method=\"median\"), df_num_train[\"Response\"], nan_transform(df_num_test.drop([\"Id\", \"Response\"], axis=1), method=\"median\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true positives: 1\n",
+      "true negatives: 2\n",
+      "false positives: 0\n",
+      "false negatives: 0\n",
+      "MCC evaluation: 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# run evaluation for median imputation\n",
+    "print \"MCC evaluation: %s\" % mcc_eval(pd.DataFrame(zip(df_num_test[\"Id\"], prediction), columns=[\"Id\", \"Response\"]), df_num_test[[\"Id\", \"Response\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# run evaluation for feature average imputation\n",
+    "prediction = sgd_class(nan_transform(df_num_train.drop([\"Id\", \"Response\"], axis=1), method=\"feature_average\"), df_num_train[\"Response\"], nan_transform(df_num_test.drop([\"Id\", \"Response\"], axis=1), method=\"feature_average\"))\n",
+    "print \"MCC evaluation: %s\" % mcc_eval(pd.DataFrame(zip(df_num_test[\"Id\"], prediction), columns=[\"Id\", \"Response\"]), df_num_test[[\"Id\", \"Response\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "prediction = sgd_class(nan_transform(df_numeric.drop([\"Id\", \"Response\"], axis=1)), df_numeric[\"Response\"])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
