--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -1857,7 +1857,101 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# none of the cells above this point have been executed\n",
+    "# outside of the first two for library and dataset imports\n",
+    "# trying principal component analysis for dimensionality reduction\n",
+    "# http://sebastianraschka.com/Articles/2015_pca_in_3_steps.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# split set into data X and labels Y\n",
+    "X = df_numeric.ix[:, 1:len(df_numeric.columns)-1].values\n",
+    "y = df_numeric.ix[:,len(df_numeric.columns)-1].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# need to do missing value imputation before preprocessing\n",
+    "X = nan_transform(df_numeric).ix[:, 1:len(df_numeric.columns)-1].values\n",
+    "\n",
+    "# transform data onto unit scale mean=0, variance=1\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "X_std = StandardScaler().fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# eigendecomposition - computing eigenvectors and eigenvalues"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# compute covariance matrix\n",
+    "# each element in the matrix represents covariance between two features\n",
+    "mean_vec = np.mean(X_std, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# this approach takes too long\n",
+    "cov_mat = (X_std - mean_vec).T.dot((X_std - mean_vec)) / (X_std.shape[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# covariance matrix using numpy\n",
+    "cov_mat = np.cov(X_std.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# eigendecomposition on covariance matrix\n",
+    "eig_vals, eig_vecs = np.linalg.eig(cov_mat)"
+   ]
   }
  ],
  "metadata": {
