random forest prediction and metrics

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -1021,15 +1021,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Classifier Accuracy Score: 99.4278071102\n",
+      "Random Forest Hit Score: 2.14007782101\n",
+      "Random Forest Classification Report:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0      0.994     1.000     0.997    353069\n",
+      "          1      0.688     0.021     0.042      2056\n",
+      "\n",
+      "avg / total      0.993     0.994     0.992    355125\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "print \"Extra Trees Classifier Accuracy Score: %s\" % (accuracy_score(y_true=y_test, y_pred=prediction) * 100)\n",
-    "print \"Extra Trees Hit Score: %s\" % hit_score(y_true=y_test, y_pred=prediction, hit_class=1)\n",
-    "print \"Extra Trees Classification Report:\"\n",
+    "print \"Random Forest Classifier Accuracy Score: %s\" % (accuracy_score(y_true=y_test, y_pred=prediction) * 100)\n",
+    "print \"Random Forest Hit Score: %s\" % hit_score(y_true=y_test, y_pred=prediction, hit_class=1)\n",
+    "print \"Random Forest Classification Report:\"\n",
     "print classification_report(y_true=y_test, y_pred=prediction, digits=3)"
    ]
   },
