random forest feature selection w/ SelectFromModel

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -715,6 +715,24 @@
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# use all three ensemble methods to obtain feature importances"
    ]
@@ -1049,6 +1067,88 @@
     "print \"Random Forest Classification Report:\"\n",
     "print classification_report(y_true=y_test, y_pred=prediction, digits=3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rf_feat_imp = get_feat_imp(rfc_clf, features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x11a83e510>"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX0AAAFMCAYAAAAnX2xZAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3XmcHHWZx/HPTAaiIZNLB1xdIRLoR44FNJwxBEWQ5QgE\nEVd0QXEhAgECLNkVXVZFRVgkCHIp4ZD1AoIBJMspcgUJC4iGFZ5kNwQVgwQz5CAgmWT2j19NqGnm\nqJ6uzPxq6vt+veY13V1d337q6Ke7q6urGtrb2xERkXJoHOgCRESk/6jpi4iUiJq+iEiJqOmLiJSI\nmr6ISImo6YuIlEhTb3cwswbgcmBn4HXgOHdfnBo+GTgbWAtc6+6zzKwRuAowYD1wgrv/zszGAdcl\ntz3t7tNynh4REelBlnf6U4Ch7j4BOAuY2THAzJqS6/sBHwammlkLMBlod/eJhBeEbyajzAS+5O77\nAI1mdlheEyIiIr3L0vQnAncCuPt8YNfUsO2ARe6+0t3XAg8Dk9z9VmBqcp+xwCvJ5fHu/lBy+Q7C\ni4WIiPSTLE1/BLAidb0t2XzT1bBVwEgAd19vZtcBFwM/SoY3dHVfERHpH71u0wdWAs2p643uvj41\nbERqWDNvvqvH3T9nZpsDj5nZ9oRt+V3etyttbevam5qGZChRRERSGrobkKXpzwMOAWab2Z7AgtSw\nZ4BtzGwUsAbYG7jAzP4R+Ft3P4/w5e+65O9JM5vk7g8CBwL39fTAra1rei2upaWZZctWZZiMjZcR\nQw2xZMRQQx4ZMdQQS0YMNcSSEUMNWTJaWpq7HZZl884c4K9mNg+4EDjdzI4ys+PcvQ04A7ib8OJw\ntbsvBX4GfMDMHiBsu5/u7n8FzgTOSbI2AWZnmUAREclHr+/03b0dOLHq5oWp4XOBuVXjrAH+oYus\nRYS9fEREZADox1kiIiWipi8iUiJq+iIiJaKmLyJSIll22RQRyd26detYsmRx73dMtLYOZ/ny1T3e\nZ+zYrRkyRL/t6YmavogMiCVLFjP9gtsYNnLzXPLWrHiJi2ccyrhx2+aSN1ip6YvIgBk2cnOGj35P\nvz3eQw89xKJFS5g8ecpGe4ybb76RI4745EbLr5e26YtIaey9994bteEDXH/91Rs1v156py8ipTFn\nzhzuuec+li79E5tvvgV//vNS9t33Yzz33P+xcKEzYcJEpk49iVNO+QJbbTWW559fAsA553yL0aPH\ncP755/Poo4/R0NDA/vsfwCc+8SnOPfdrrFjxCitXrmSvvT7EypUrmTnzfE444WTOO+8brF69mr/8\nZRmHH34kU6YcwdFHH83YseNYvPj/WLNmDV//+nlsscW7uO66WTz88IOsX7+OKVM+waGHHs7NN9/A\nPffcRUNDA/vt9zGOOOItv3mtmZq+iJTO0qV/4jvfuZzXX3+NI488lFtvvYtNN92UI4+czNSpJwGw\n0067cOaZZ3HLLbP5wQ+uYffd9+SFF17g+9+/jra2NqZNO54PfjAcaX78+N355CePAsLmnTPO+FcW\nLnyW/fY7gEmTPszLL7/MKadMZcqUIwDYfvsdOfXUf+b737+ce++9i91335PHHnuUWbOup62tje99\n7zKee24xv/jFPVxxxdW0t7dz+unT2H33vXjve7esa9rV9EWkdN797vcwbNgwmpqaGDPmnQwfPjwZ\n8ubBKTsa+g477MSDDz7AFlu8i/HjxwPQ1NTE9tvvyHPPPQfAlltu9ZbHGDPmHdx440944IH7GDZs\nM9ra1m0YVqkYAJtvvgWtrcv5/e+fZ7vtdtiQPW3adO67715efHEp06efSHt7O6tXr+KPf/y9mr6I\nFNeaFS8NSFZDQ/rIw+1d3ufZZ59h4sQWFiz4DVtvPY6xY8dy7713cNBBH6etrY2nn/4NBx10CPPn\nP0JjY+Nb8n7ykx+y4447MWXKETz55OM8+ui8dAWdHmvLLcdyyy03A9DW1saMGdM5+eTT2XrrcXz7\n25cAcOONP85lzyQ1fREZEGPHbs3FMw7NfP8xY7Ltp9+bzg0fujv0/B13/Jyf/vSHDBs2jH/7t3MY\nMWIEzzzzW0444fO0tbWx7777s+221mUNX//6v3PIIYdx0UX/wS9+cTfDhw9nyJAm1q5d28Xjw7bb\nVth997044YTP097ezuGHf4Jx47bhgx/cjRNP/CfWrl3L9tvvQEtL/bu3NrS3d/0qF4Nly1b1WlwM\nx7eOoYZYMmKoIY+MGGqIJSOGGvo745RTvsCMGV96y2abokxHS0tztydR0S6bIiJVuno3Plho846I\nSJVLLrlyoEvYaPROX0SkRNT0RURKRE1fRKRE1PRFREpETV9EpETU9EVESkRNX0SkRNT0RURKRE1f\nRKRECvWL3K5OpFx9smSdGFlEpHuFavq9nUhZJ0YWEelZoZo+9P+JlEVEBhNt0xcRKZFe3+mbWQNw\nObAz8DpwnLsvTg2fDJwNrAWudfdZZtYEXAOMBTYFvunuPzezXYDbgYXJ6Fe4+005To+IiPQgy+ad\nKcBQd59gZnsAM5PbSJr7TGA88Bowz8xuBQ4GXnb3Y8xsNPAU8PPkfhe6+0X5T4qIiPQmS9OfCNwJ\n4O7zzWzX1LDtgEXuvhLAzB4GJgE3Ah3v4BsJnwIgNP2KmU0BFgHT3f3VuqdCREQyybJNfwSwInW9\nzcwauxm2Chjp7mvc/VUzayY0/y8nw+cDM9x9H2Ax8NV6ihcRkdpkeae/EmhOXW909/WpYSNSw5qB\nVwDM7L3Az4BL3f2GZPgt7t7xIjEHuKSnBx49ehhNTW/uc9/aOrzXYseMGU5LS3Ov96vWl3HyHH8w\nZcRQQx4ZMdQQS0YMNcSSEUMN9WRkafrzgEOA2Wa2J7AgNewZYBszGwWsIWzaucDMtgDuAqa5+y9T\n97/LzE5298eBjwJP9PTAra1rOl1P/wirO8uXr675pMM6cXR+GTHUkEdGDDXEkhFDDbFkxFBDloye\nXhCyNP05wP5mNi+5fqyZHQVsluypcwZwN9AAzHL3pWb2HWAUcLaZ/TvQDhwInABcamZvAC8CUzM8\nvoiI5KTXpu/u7cCJVTcvTA2fC8ytGuc04LQu4p4ifDEsIiIDQD/OEhEpETV9EZESUdMXESkRNX0R\nkRJR0xcRKRE1fRGRElHTFxEpkcKdRKUeXZ1uEXTKRREpj1I1/d5Otwg65aKIDG6lavqg0y2KSLlp\nm76ISImo6YuIlIiavohIiajpi4iUSOm+yK1XV7t9apdPESkKNf0a9bbbp3b5FJGYqen3gXb7FJGi\n0jZ9EZESUdMXESkRNX0RkRJR0xcRKRE1fRGRElHTFxEpETV9EZESUdMXESkRNX0RkRJR0xcRKRE1\nfRGRElHTFxEpETV9EZES6fUom2bWAFwO7Ay8Dhzn7otTwycDZwNrgWvdfZaZNQHXAGOBTYFvuvvP\nzWwccB2wHnja3aflOzkiItKTLO/0pwBD3X0CcBYws2NA0txnAvsBHwammlkL8I/Ay+4+CTgQuDQZ\nZSbwJXffB2g0s8PymhAREeldlqY/EbgTwN3nA7umhm0HLHL3le6+FngYmATcSHj33/EYa5PL4939\noeTyHYQXCxER6SdZTqIyAliRut5mZo3uvr6LYauAke6+BsDMmoGbgC8nwxuq79vTA48ePYympjdP\nO9jaOrzXYseMGU5LS3OXw7KMn0dGT+P3pC/jxJgRQw15ZMRQQywZMdQQS0YMNdSTkaXprwTS6R0N\nv2PYiNSwZuAVADN7L/Az4FJ3vyEZvq6r+3antXVNp+vp89B2Z/ny1SxbtqrbYVnUm9HT+N1paWmu\neZwYM2KoIY+MGGqIJSOGGmLJiKGGLBk9vSBk2bwzDzgIwMz2BBakhj0DbGNmo8xsU8KmnV+Z2RbA\nXcC/uPsPUvf/tZlNSi4fCDyEiIj0myzv9OcA+5vZvOT6sWZ2FLBZsqfOGcDdhE03s9x9qZl9BxgF\nnG1m/w60E5r8mcBVZrYJ4QVjds7TIyIiPei16bt7O3Bi1c0LU8PnAnOrxjkNOK2LuEWEvXxERGQA\n6MdZIiIloqYvIlIiavoiIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq\n+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoi\nIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq+iIiJdLU2x3MrAG4HNgZ\neB04zt0Xp4ZPBs4G1gLXuvus1LA9gPPc/SPJ9V2A24GFyV2ucPebcpoWERHpRa9NH5gCDHX3CUkT\nn5nchpk1JdfHA68B88zsVndfZmYzgKOB1ams8cCF7n5RnhMhIiLZZNm8MxG4E8Dd5wO7poZtByxy\n95XuvhZ4GJiUDPtf4PCqrPHAwWb2gJnNMrPN6qpeRERqkuWd/ghgRep6m5k1uvv6LoatAkYCuPsc\nM9uqKms+cJW7/9rMvgR8FZjR3QOPHj2MpqYhG663tg7vtdgxY4bT0tLc5bAs4+eR0dP4PenLODFm\nxFBDHhkx1BBLRgw1xJIRQw31ZGRp+iuBdHpHw+8YNiI1rBl4pYesW9y940ViDnBJTw/c2rqm0/Xl\ny1d3c8/O91m2bFW3w7KoN6On8bvT0tJc8zgxZsRQQx4ZMdQQS0YMNcSSEUMNWTJ6ekHIsnlnHnAQ\ngJntCSxIDXsG2MbMRpnZpoRNO7+qGr8hdfkuM+vYPPRR4IkMjy8iIjnJ8k5/DrC/mc1Lrh9rZkcB\nm7n7LDM7A7ib0NxnufvSqvHbU5dPAC41szeAF4Gp9ZUvIiK16LXpu3s7cGLVzQtTw+cCc7sZ93lg\nQur6U4QvhkVEZADox1kiIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq\n+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoi\nIiWipi8iUiJq+iIiJaKmLyJSImr6IiIloqYvIlIiavoiIiWipi8iUiJq+iIiJaKmLyJSImr6IiIl\n0tTbHcysAbgc2Bl4HTjO3Renhk8GzgbWAte6+6zUsD2A89z9I8n1ccB1wHrgaXeflt+kiIhIb7K8\n058CDHX3CcBZwMyOAWbWlFzfD/gwMNXMWpJhM4CrgKGprJnAl9x9H6DRzA7LYyJERCSbLE1/InAn\ngLvPB3ZNDdsOWOTuK919LfAwMCkZ9r/A4VVZ4939oeTyHYQXCxER6SdZmv4IYEXqepuZNXYzbBUw\nEsDd5wBtPeRuuK+IiPSPXrfpAyuB5tT1Rndfnxo2IjWsGXilh6z1qcu93ZfRo4fR1DRkw/XW1uG9\nFjtmzHBaWpq7HJZl/Dwyehq/J30ZJ8aMGGrIIyOGGmLJiKGGWDJiqKGejCxNfx5wCDDbzPYEFqSG\nPQNsY2ajgDWETTsXVI3fkLr8azOb5O4PAgcC9/X0wK2tazpdX758da/FLl++mmXLVnU7LIt6M3oa\nvzstLc01jxNjRgw15JERQw2xZMRQQywZMdSQJaOnF4QsTX8OsL+ZzUuuH2tmRwGbufssMzsDuJvQ\n3Ge5+9Kq8dtTl88ErjKzTQgvGLMzPL6IiOSk16bv7u3AiVU3L0wNnwvM7Wbc54EJqeuLCHv5iIjI\nANCPs0RESkRNX0SkRNT0RURKRE1fRKRE1PRFREpETV9EpETU9EVESkRNX0SkRNT0RURKRE1fRKRE\nshx7R3K2bt06lixZ3Om21tbhnQ7mNnbs1gwZMqR6VBGRuqjpD4AlSxYz/YLbGDZy8y6Hr1nxEhfP\nOJRx47bt58pEZLBT0x8gw0ZuzvDR7xnoMkSkZLRNX0SkRNT0RURKRE1fRKREtE2/oLQHkIj0hZp+\nQWkPIBHpCzX9AtMeQCJSKzX9kupq8xBoE5HIYKemX1K9bR4CbSISGYzU9Eus3s1D+jJZpHjU9KXP\n8vgyWS8cIv1LTV/qUu+nhRheOLKM31uGSFGo6cuAG+gXjjy+39AnFikKNX0ZFOp94RjoFx7I54VD\nn3qkN2r6IjmJ4YVDn3qkN2r6IhHJ4wd3+tSj36H0RE1fRHI30C8c/fWJBerfXLaxN9lV67Xpm1kD\ncDmwM/A6cJy7L04NnwycDawFrnX3Wd2NY2a7ALcDC5PRr3D3mzJVKiKlEvsnFqj/xac/NtlVy/JO\nfwow1N0nmNkewMzkNsysKbk+HngNmGdmtwITuxlnPHChu1+UqToRkQEUw+a2vDI6ZDme/kTgTgB3\nnw/smhq2HbDI3Ve6+1rgIWCfLsYZn9x/PHCwmT1gZrPMbLNcpkJERDLJ0vRHACtS19vMrLGbYauB\nkUBz1e3rknHmAzPcfR9gMfDVPtYtIiJ9kGXzzkpCE+/Q6O7rU8NGpIY1A63djWNmt7h7x4vBHOCS\nnh549OhhNDW9+eVEa+vwXosdM2Y4LS3NXQ7LMn4eGT2NH0uG5kVt4+eRoXmRbfw8MvprOvLI6I/1\nIi1L058HHALMNrM9gQWpYc8A25jZKGANsDdwQTKsq3HuMrOT3f1x4KPAEz09cGvrmk7Xq78178ry\n5atZtmxVt8OyqDejp/FjydC8qG38PDI0L7KNn0dGf01HHhkbY1709AKQpenPAfY3s3nJ9WPN7Chg\ns2RPnTOAu4EG4Gp3X2pmbxkn+X8CcKmZvQG8CEzN8PgiIpKTXpu+u7cDJ1bdvDA1fC4wN8M4uPtT\nhC95RURkAGT5IldERAYJNX0RkRJR0xcRKRE1fRGRElHTFxEpETV9EZESUdMXESkRNX0RkRJR0xcR\nKRE1fRGRElHTFxEpETV9EZESUdMXESkRNX0RkRJR0xcRKRE1fRGRElHTFxEpETV9EZESUdMXESkR\nNX0RkRJR0xcRKRE1fRGRElHTFxEpETV9EZESUdMXESkRNX0RkRJR0xcRKRE1fRGRElHTFxEpkabe\n7mBmDcDlwM7A68Bx7r44NXwycDawFrjW3Wd1N46ZjQOuA9YDT7v7tJynR0REepDlnf4UYKi7TwDO\nAmZ2DDCzpuT6fsCHgalm1tLDODOBL7n7PkCjmR2W14SIiEjvsjT9icCdAO4+H9g1NWw7YJG7r3T3\ntcBDwD5djDM+uf94d38ouXwH4cVCRET6Sa+bd4ARwIrU9TYza3T39V0MWw2MBJqrbl9nZkOAhtRt\nq5L71mTNipf6NCzrferNyDJ+LBmaF9nvo3mRX8ZgmY48MvpzvejQ0N7e3uMdzOxC4FfuPju5/nt3\n3zK5/HfAee5+cHJ9JvAwMAF4tHocM/uDu783ue1QYD93P7WmikVEpM+ybN6ZBxwEYGZ7AgtSw54B\ntjGzUWa2KbA38CvgkW7GedLMJiWXDyRsDhIRkX6S5Z1+x544OyU3HUvYRr9ZsqfOwcBXCJturnb3\nK7sax90Xmtm2wFXAJoQXjOPdvecCREQkN702fRERGTz04ywRkRJR0xcRKRE1fRGRElHTFxEpETV9\nEZESUdMXESmRLIdhiIqZbULY/38k8ArhaJ1v1JjxDnf/i5ltA+wC/M7df1djxo7A6+7+v6nb9kiO\nNdQvNVTlfczd7+7r+AOZYWZvIyzTzYCXCcu0pn2J88ioV941mNmuwCh3v7eGcepehklOXdOSx/O0\nKi+PdXMfYH3q+F9Zx6vruV6VVfMyTcbLbd0q1H76yQ/BvgUsIhznpxl4P+HInbdkzLgUWAL8GTgd\neBDYE5jt7t/OmHE2cADhR2ZPAie5e7uZ3efu+/ZTDVOrbjqD5Gim7v79omQky/QcwjKdADwKvBeY\n4e4PZ6whj4xNuxuWpVnlVMMU4DvAOuAS4HBCw3R3/9eMGa8Bs4Hp7r48yzhdZNQ1LTk9T/NYN48E\nLgReA35IOBjkXwmHlflGxox6n+t5LNO61620or3T/zIw0d1XdtxgZiOBe4FMKxPhSJ8nm9mDwN7u\n/mpyiOhfAZkaLnCQu++VPP4FwGXASXQ+oNzGrmEKMIpwNNMGYCjwNxnHjSljBjDB3f9qZu8gPDEO\nAOYSDuvRXxkLgC2A5YTpaE/937qfajiL8KlvOPA4sKW7v2Fm8zKOD6Eh3Ao8ZGY3ArPc/YUaxof6\npyWP52ke6+Y/A9sn4z2S/F9HOD5YpqZP/c/1PJZpHuvWBkXbpr8JsKbqttcIT8zMzGwMsBgYltw0\nguwLkfR93X0GMNLMZtRSRw41HAz8kvDCfQ6wxN2/5u5fK1jGSMJJdSCccGfLpFkMraGGPDImEpbH\neHd/n7tv3fG/H2sYQjj67Ookqz11e1btyYEOdyO8gN1sZk+a2c9qyKh3WvJ4nuaxbjYCa9x9EfBV\nd29LNonU0vfqfa7nsUzzWLc2KNo7/e8TDtr2MOHQzSMIT9ZLasg4B3iA8M7uN2b238COhFfkrG4w\ns8eAv08+Qn8euI2wiaZfakhW3i+b2RGEj/Nvq6H+mDJ+CjxmZvcDk4DLzGw64aN0v2W4+zIz+yLw\nQeAXNTx2bjUAPyG88CwhNLw7k801d9aQ0QDg7muA7wLfNbMRQKWGjHqnpe7naR7rJvAD4Ckz28Xd\nLwMws5uB/6oho97neh7LNI91a4NCbdMHMLMtgN1581j+/+3uf64xYzhh29g7CV+K/Nrdl9WY8T7g\nD+7elrptSg3bLNM1/AV4stYaUlk7Akdn3UbYTcYOScYX68w4ptY6kvq3A37r7m5m73T3l/uYscDd\nn+1LRr3yqCHZDPJqcvVAoLWW7bZmtrO7/6aWx+wmp65pyeN5WlVLn9bvjh0mUtcr7r6wxox6n+vV\ny3S5u9eyeSfX9btQTT+Z+e8H7ge+SDiL19PAue6+oodR0xlHuvtNSdP9CmF72xPAN9x9dY0ZmwFf\n7UtGVd5Mdz+j1vHqzehiOj5A2O5Yy7z4MXCau9d2JofOGYcB+xMaxCuEQ27PrnFvkU8Ttm8OI7yQ\n3+Pumd9NDaJl2kJ4brwGXNTR8MzsK1k3jdT7HDGzRmAyodn/BriIsC39S1kbf07TUXcdXWT2ZZkc\nTDiH+P2EL6NHJTX8voaMutbvtKJt3rmecBL2i4E/EL4wmgT8mLANMIsTgZsIK8BzwKnARwkfST9d\nY8bFhI9uNWWY2SNVN21v4bwDeDivcK+qMhqA7WrN4K3TcQq1z4u9CB9ZvwtcV0ujBjCzywjbWO8g\nbPtsJrwbOgA4LmPGxYQn9q28+SQ/yMw+5O5nZywlz2Xap+WR0zK9HphDeG4/aGYHufvzhD1Xsqr3\nOTIrqf9dwDuA7xGW7SzC8skij+mou456l4mZzSJsmmoGvgb8J/AnwiHmD8hYQx7r9wZFa/rr3P1+\nM/uyu3fs0vWUmX2yD1kVdz8+ufyMmX28DxnbuntHY6ol41LCtsHphI99PwGOqvGx88jo0NfpgLCt\n8nDCCv3b5J3/HcDi9N4bPdjR3aufyLfVuHfDLqmMO83sHnffP9mmXKuiL9OhnuzSaGZPAbea2Yep\nbSeBDn19jmzr7ntb2A32aXe/OqnnCzU8dh7TkUcd9S6TirtPsnCOkf9x98uTGqbXkJHn+l24vXde\nMbNPAHPN7BgzG21mn+Gtewr0pGJmpwNrzewDsOEHE93up513hrv/mLAb1n8QvoF/zd2fT97JZJJH\nRr3TkWh391fcfTqwL2HzzNmEM65l0WhmnXY7s3B2tbU11PA2M9sjGXdvwnmcRxN+yJLVYFmmTRZO\nY4q7P0LYX/42ajsfdd3rRfIu9A1gv+T6NtS2t0ke01F3HTksk03M7ADCJ6QtzOz9ZvYewh5OWeWx\nfm9QtKZ/PGEzzkmEj2i/Aw4j42aAxCHASmAhsFPyJculwMn9meHuvwaOAc4DWmp47OqMo+vIyGNe\nbNg26u7L3P0Kdz/C3f8u4/ifA840sz8mf38g7F99fM+jdXIicKmZLSU0h+lJbi0fffNapvUsjzzW\ni1MJe+xskeTdQNgss1UNGfXOiy8QlmlDarv1hcCZNdSQx3R0V8eMGjLqXa4nJHVsDUwj7LV3D1DL\nl9InUP/6/ab29vZC/lUqlcYcMhoGOqNSqTRWKpWJlUrl7TWON6IqY7c+PPaIWsfZGBlVeUPrmRc5\n1vH2SqUytD+XRxfrxd611NDTdNTzfKlUKpvWukyqxt88h+Wxecd86a9l2t0yqXM6huWwTOuan0Xb\ne2cc4Rdx7wfeQ9ijYDFwhru/WJQMM6sA5wJvEPZdvp7w/cpZyTuaLDWsAU7p2E7ZFzFkRDQvtk/q\naAV+RPgkuY5wOIPbi1BDKuObhM1sfc2oa5kk46ddT3in3JB1d8mcMvKaF9V1HAOQpY6clmnd8yKt\naF/kXgac6uEk63sSfqp9E3A12ffeqc44jPDjj/7MuAr4OmH75O3AzoQV814gU6Mj7IL2ATO7D/ia\nuz+QcbzYMqrnxS6EJ0h/z4srCR+XxxKWZYXw68c7krqKUENeGfWun/cSvmf7E+GLVyNsmmknfO+T\nRR4ZecyLrur4Xg11bKwaap0Xb6r3Y1d//lUqlV9VXX8w+f9IkTIqlcq85H9DpVLx6pyMGfcl/3et\nVCo3VyqVBZVK5TuVSuXUImVENC8eTl2+LnX5gaLUkGNGXcukUqlsXqlUflapVPZPrv8y62PnnJHH\nvKirjhhqqP4r2jv9xWZ2JeFV8hDg8eSHD6/2PFp0GUvM7KeET1qrzeybhH1vl9ZQQ8fP7R8Hjki+\nbJtEeBdQpIxY5oUn+1RPdffPAVg4LEOmTX6R1JBXRl3LxN1fSnaj/raZ7VbD4+aaQQ7zIoc6Yqih\nk6I1/WMJe3V8DHgMuIZwYKlPFSzjs8BBhL0jVhMOr/waYX/grK5LX/Hwi+SfJ39FyuhqXqyh/+fF\n8cBkd1+fuu2PZD9eTAw15JVR9zLxcMiC08zsc/TtNwJ5ZOQxL+qtI4YaOinUF7mw4eiUbxBWwqMJ\nR5/7YS2/BI0lo16pGl4lfLlUz3QMWEbV+J8lfNFV9Oko7PLoIqPmZVL1/Dim1vE3QkYe86JPdcRQ\nQ1qh3unbX1H4AAALMElEQVSb2amEffQbCcexGEqYkXuQcR/iGDK6+DZ+gxr2TDiFsN9vPdMx4Bk5\nLY88pqPeZTrgNcSSEUMNsWTEUEO1QjV9wq/aticcmfIpd383gIWTkRQp4xrCjzWepfNHtVq+jf9M\nnTXEkpHH8shjOuqtI4YaYsmIoYZYMmKooZOi/SK3ERjm4YiO0wAsHFejlsMGxJDxMeAFwuFiP5L6\nq2X3qximI4+MGGrIIyOGGmLJiKGGWDJiqOEtYUVyPvCEmTW6+5zktrsJP3goTIaHE1ycAGxZw2Pm\nWkNEGTHUkEdGDDXEkhFDDbFkxFBDZ/Xs7zkQf9U/w65UKs1FzdC8iKcGTYfmxWCfFx1/fRppoP4q\nlcrs1OUDi5oRQw2xZMRQg6ZD82Kwz4v0X9E277wjdbmmI+VFlhFDDbFkxFBDHhkx1BBLRgw1xJIR\nQw2dFK3pp9X1A4WIMmKoIZaMGGrIIyOGGmLJiKGGWDJiqKFwu2w2mNkmhBerjssdP39/o0AZMdQQ\nS0YMNWg68s2IoYZYMmKooZOiNf2tAE8uNySXGwj7t29doIwYaoglI4Ya8siIoYZYMmKoIZaMGGro\nrN4vBWL6q1QqewyGjBhqiCUjhho0HZoXg2leFHmbfle+NUgyYqghlowYasgjI4YaYsmIoYZYMvq9\nhsHW9KP4oiSHjBhqiCUjhhryyIihhlgyYqghlox+r2GwNf08jnAZQ0YMNcSSEUMNeWTEUEMsGTHU\nEEtGv9cw2Jq+iIj0YLA1/Rg+ruWREUMNsWTEUEMeGTHUEEtGDDXEkqHNO7Uws03N7O2pm35cxAwz\n27zqplrH72o5Fi4jhhqSjK6eRP09HXXVkFdGkvN2Mxval4xYpiOGjJxqqHvdKtSZsyycfORcwhlk\nLgGuJ/zW4Cx3v6EoGfbWk6hcTzgbTi0nUdkamAnsCrQRXsAXAKcXKSOGGpKMccBlwHbAu4EngMXA\nGe7e6/lMY6ghx4ztCet3K/AjwtEc1wHT3f32Ak3HgGfkVEPd61Za0X6cdRXwdWAkcDuwM/AKcC+Q\nqWFHknEv4bRnfyJ8NDPge9R2EpVZhBeZ+R03mNmewLXAhwqUEUMNEJ6Yp7r7wmTcw4DZwNXAwQWp\nIa+MK4GzgbHJuBXgdeAOwvpelOmIISOPGvJYtzYo2uadJne/F/gZ8Bd3f8HdXwXWFixjV+B3wLfc\n/SOEs+HUehKVt6VXAgB3f7SG8WPJiKEGgJEd75qScT/k7k8AowtUQ14Zje7+gLv/ALjF3V9y95WE\nd5n9VcNgycijhjzWrQ2K9k5/iZn9lFD3ajP7JrACWFqkDHd/ycw+CXzbzHar4XHTfmNm1wB3Jo/d\nTHjn8NuCZcRQA8BiM7uS8G72EOBxMzuYcC7SotSQV4ab2Sxgqrt/DsDMvghk2hyRUw2DJSOPGvJY\ntzYoWtP/LHAQsBBYDZxO2Ezy+aJluHsbcJqZfY6+feI6CZgCTARGEFaG24BbCpYRQw0AxwLHE05l\n+RjhPMa7AZ8qUA15ZRwPTHb39anb/kj4/qq/ahgsGXnUkMe6tUGhvsgFMLMxhC9QXyU033XAD909\n84TEkGFmhwCvJ5uJOm47zN1v7UMNawhfBNczHQOWEUMNSUZdyySGGnLMSK/fxwDr6f/1e1BkxPJc\n71Cod/pmdirhVa8RuB8YSlgp9wBOLkqGmV0OjAKazOx04OPu/ldgOpB1RRrw6cgjI4Yakoy6lkkM\nNeSYEcP6PSgyYlge1QrV9IFPA9sD7yR8+fluADN7sGAZf+fueyfjnELY42cKtf3IIobpyCMjhhqg\n/mUSQw15ZcSwfg+WjBiWRydF23unERjm7i8B0yD8MArYtGAZm1jyYxd3/y6wyMyybi/Nq4ZYMmKo\nAepfJjHUkFdGDOv3YMmIYXm8JaxIzgeeMLNGd5+T3HY3YT/WImVcDDxtZi3J9X8B3g7s3Y81xJIR\nQw1Q/zKJoYa8MmJYvwdLRgzLo7N6D+Df33+VSqWx6npzETMqlcrbKpVKQ9VtHyjadOQ0Lwa8hjyW\nSQw15JgRw/o9KDJiWB7pv0LtvZN8g3028M+EbVzXEX4p+E/u7j2MGlVGDDXEkhFDDZqOfDNiqCGW\njBhqqFa0zTtXAs8lly8BvgucSvgIVaSMGGqIJSOGGvLIiKGGWDJiqCGWjBhq6KRoTf9v3P0SYDNg\nJ+B6d38yuV6kjBhqiCUjhhryyIihhlgyYqghlowYauikaE2/46fL+wAP+Zs/TKhl4mPIiKGGWDJi\nqCGPjBhqiCUjhhpiyYihhk6Ktp/+UjM7l/CT5m+YWTNwGrUdgyKGjBhqiCUjhhryyIihhlgyYqgh\nlowYauikaO/0TwT+AJzr7rcAOxB+sDCtYBkx1BBLRgw15JERQw2xZMRQQywZMdTQWV93+4nxr1Kp\nXDEYMmKoIZaMGGrQdGheDKZ5UbR3+r2xQZIRQw2xZMRQQx4ZMdQQS0YMNcSS0e81DLamLyIiPVDT\nFxEpETV9EZESGWxNv5bDlcacEUMNsWTEUEMeGTHUEEtGDDXEktHvNRRtP33MbGfCKQr/CHyRcEaf\nC919DWE/1sJk9KBQ01FvRgw1aDryzYihhlgyYqghrWgHXPsW4WwxIwknIf81sArYxd0/XZQMM+t2\nIbn73f1RQywZMdSg6cg3I4YaYsmIoYa3qHcf0f78q1QqjyT/h1cqledSt/+ySBmVSuWmSqXyXKVS\nuaZSqVyb+rumSNOR07wY8Bo0HZoXg31epP+Ktk2/0cy2dPfVJGeTN7NRwNsKlvEp4AXgfHc/NvX3\n+X6sIZaMGGrIIyOGGmLJiKGGWDJiqKFzWF9GGkAzgJstnEFmfnLbbcCPi5Th7usIZ7TvdLozM9um\nv2qIKCOGGvLIiKGGWDJiqCGWjBhq6KwvHw9i+qtUKg2VSuWxQZIRQw0DnhFDDZoOzYvBOi+K9k7/\nLZLDjNa121MsGTHUEENGDDXkkRFDDbFkxFBDLBkDXUPhm34ij12QYsiIoYZYMmKoIY+MGGqIJSOG\nGmLJGLAaCrWfvpn9hLdOaAOwdZEyYqghlowYasgjI4YaYsmIoYZYMmKooVqhmj7hXJG13B5rRgw1\nxJIRQw15ZMRQQywZMdQQS0YMNXRSqB9niYhIfQbLNn0REclATV9EpETU9EVESkRNX0rLzK4xs2fN\n7B9qHO+rZvahjVWXyMZUtL13RPL0WWCou7fVON4+wH0boR6RjU5770gpmdmtwGTgKeAi4DTCvs9P\nANPc/Q0zOxn4R2AY4fjl/wDsDlxOOMTtx4HvAl9x9wfNbCvgfnd/n5ldC7wDGAf8C/Dn5HHeDrwM\nfMHdn++v6RXpoM07UkrufhjhBy+fAY4H9nL3DwLLgDPNrBk4FNjH3XcCbgVOcvf/BB4H/sndn+4i\nOv0u6mV33wG4G5gFHOXuuwIzk+si/U6bd6TMGoB9gW2BR82sAdgEeNLdV5nZZ4CjzKwC/D3h5BXp\ncXvTcUTECuEd/23JY7QDzTlNg0hN1PSl7BqBG9z9NAAzGwY0mdnfAvcTNt/8F/AisEsX46cPfLVJ\n1bDXkv9DgP9LPkmQNP535TgNIplp846U3f3Ax82sJWnGVxK27+8GLHL3i4H/Bg4kNG+ANt58w/Qy\nsENy+fBuHuNZYIyZTUyuHwf8KM+JEMlKTV/KrN3dFwBfI+yNs4Dwrv08wnb4IWb2P8AjwHPA+5Lx\n7gSuNLM9gf8AppnZ48DQdHbHBXd/AzgSuNDMngKOBmo5S5pIbrT3johIieidvohIiajpi4iUiJq+\niEiJqOmLiJSImr6ISImo6YuIlIiavohIifw/OYi/giA2yPgAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10ca942d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# plot top 20 features based on random forest results\n",
+    "rf_feat_imp.sort_values(by=\"importance\", ascending=False)[:20].plot(y=\"importance\", x=\"feature\", kind=\"bar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rf_sfm = SelectFromModel(rfc_clf, prefit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
