random forest on feature subset

--- a/Bosch_plp.ipynb
+++ b/Bosch_plp.ipynb
@@ -1749,7 +1749,313 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# test support vector machine with linear kernel and subset of features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lsvm = LinearSVC(verbose=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibLinear]"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "LinearSVC(C=1.0, class_weight=None, dual=True, fit_intercept=True,\n",
+       "     intercept_scaling=1, loss='squared_hinge', max_iter=1000,\n",
+       "     multi_class='ovr', penalty='l2', random_state=None, tol=0.0001,\n",
+       "     verbose=2)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lsvm.fit(X_new_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "prediction = lsvm.predict(X_new_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearSVC Accuracy Score: 99.4227384724\n",
+      "LinearSVC Hit Score: 0.632295719844\n",
+      "LinearSVC Classification Report:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0      0.994     1.000     0.997    353069\n",
+      "          1      0.650     0.006     0.013      2056\n",
+      "\n",
+      "avg / total      0.992     0.994     0.991    355125\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_report(y_test, prediction, estimator_type=\"LinearSVC\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# test random forest with subset of features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rf_clf = RandomForestClassifier(n_estimators=100, verbose=2, oob_score=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "building tree 1 of 100\n",
+      "building tree 2 of 100\n",
+      "building tree 3 of 100\n",
+      "building tree 4 of 100\n",
+      "building tree 5 of 100\n",
+      "building tree 6 of 100\n",
+      "building tree 7 of 100\n",
+      "building tree 8 of 100\n",
+      "building tree 9 of 100\n",
+      "building tree 10 of 100\n",
+      "building tree 11 of 100\n",
+      "building tree 12 of 100\n",
+      "building tree 13 of 100\n",
+      "building tree 14 of 100\n",
+      "building tree 15 of 100\n",
+      "building tree 16 of 100\n",
+      "building tree 17 of 100\n",
+      "building tree 18 of 100\n",
+      "building tree 19 of 100\n",
+      "building tree 20 of 100\n",
+      "building tree 21 of 100\n",
+      "building tree 22 of 100\n",
+      "building tree 23 of 100\n",
+      "building tree 24 of 100\n",
+      "building tree 25 of 100\n",
+      "building tree 26 of 100\n",
+      "building tree 27 of 100\n",
+      "building tree 28 of 100\n",
+      "building tree 29 of 100\n",
+      "building tree 30 of 100\n",
+      "building tree 31 of 100\n",
+      "building tree 32 of 100\n",
+      "building tree 33 of 100\n",
+      "building tree 34 of 100\n",
+      "building tree 35 of 100\n",
+      "building tree 36 of 100\n",
+      "building tree 37 of 100\n",
+      "building tree 38 of 100\n",
+      "building tree 39 of 100\n",
+      "building tree 40 of 100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  40 tasks       | elapsed: 18.6min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "building tree 41 of 100\n",
+      "building tree 42 of 100\n",
+      "building tree 43 of 100\n",
+      "building tree 44 of 100\n",
+      "building tree 45 of 100\n",
+      "building tree 46 of 100\n",
+      "building tree 47 of 100\n",
+      "building tree 48 of 100\n",
+      "building tree 49 of 100\n",
+      "building tree 50 of 100\n",
+      "building tree 51 of 100\n",
+      "building tree 52 of 100\n",
+      "building tree 53 of 100\n",
+      "building tree 54 of 100\n",
+      "building tree 55 of 100\n",
+      "building tree 56 of 100\n",
+      "building tree 57 of 100\n",
+      "building tree 58 of 100\n",
+      "building tree 59 of 100\n",
+      "building tree 60 of 100\n",
+      "building tree 61 of 100\n",
+      "building tree 62 of 100\n",
+      "building tree 63 of 100\n",
+      "building tree 64 of 100\n",
+      "building tree 65 of 100\n",
+      "building tree 66 of 100\n",
+      "building tree 67 of 100\n",
+      "building tree 68 of 100\n",
+      "building tree 69 of 100\n",
+      "building tree 70 of 100\n",
+      "building tree 71 of 100\n",
+      "building tree 72 of 100\n",
+      "building tree 73 of 100\n",
+      "building tree 74 of 100\n",
+      "building tree 75 of 100\n",
+      "building tree 76 of 100\n",
+      "building tree 77 of 100\n",
+      "building tree 78 of 100\n",
+      "building tree 79 of 100\n",
+      "building tree 80 of 100\n",
+      "building tree 81 of 100\n",
+      "building tree 82 of 100\n",
+      "building tree 83 of 100\n",
+      "building tree 84 of 100\n",
+      "building tree 85 of 100\n",
+      "building tree 86 of 100\n",
+      "building tree 87 of 100\n",
+      "building tree 88 of 100\n",
+      "building tree 89 of 100\n",
+      "building tree 90 of 100\n",
+      "building tree 91 of 100\n",
+      "building tree 92 of 100\n",
+      "building tree 93 of 100\n",
+      "building tree 94 of 100\n",
+      "building tree 95 of 100\n",
+      "building tree 96 of 100\n",
+      "building tree 97 of 100\n",
+      "building tree 98 of 100\n",
+      "building tree 99 of 100\n",
+      "building tree 100 of 100\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed: 47.1min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=100, n_jobs=1,\n",
+       "            oob_score=True, random_state=None, verbose=2, warm_start=False)"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_clf.fit(X_new_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  40 tasks       | elapsed:    7.7s\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:   19.4s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = rf_clf.predict(X_new_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest Accuracy Score: 99.4354100669\n",
+      "Random Forest Hit Score: 2.82101167315\n",
+      "Random Forest Classification Report:\n",
+      "             precision    recall  f1-score   support\n",
+      "\n",
+      "          0      0.994     1.000     0.997    353069\n",
+      "          1      0.892     0.028     0.055      2056\n",
+      "\n",
+      "avg / total      0.994     0.994     0.992    355125\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "scoring_report(y_test, prediction, estimator_type=\"Random Forest\")"
+   ]
   },
   {
    "cell_type": "code",
